--- a/1001_Site_Renewal/리뉴얼/css/sub_01.css
+++ b/1001_Site_Renewal/리뉴얼/css/sub_01.css
@@ -169,7 +169,8 @@ header .header_box .login form a {
     opacity: 1;
 }
 
-.con_01 .top {
+.title {
+    width: 100%; height: 410px;
     background: url(../img/sub/img_sub01.jpg) no-repeat center;
     transition: .5s;
 }
