--- a/1001_Site_Renewal/리뉴얼/css/sub_03.css
+++ b/1001_Site_Renewal/리뉴얼/css/sub_03.css
@@ -25,22 +25,14 @@ header .header_box {
     position: relative;
     z-index: 2;
 }
-header .header_box > a{
-    transform:translateY(-40%);
-}
-header .header_box nav {
-    height: 100%;
-}
-header .header_box nav:hover .header_2depth {
-    display: block;
-}
+header .header_box > a{transform:translateY(-40%);}
+header .header_box nav {height: 100%;}
+header .header_box nav:hover .header_2depth {display: block;}
 header .header_box nav .header_1depth {
     height: 100%;
     display: flex;
 }
-header .header_box nav .header_1depth > li {
-    text-align: center;
-}
+header .header_box nav .header_1depth > li {text-align: center;}
 header .header_box nav .header_1depth > li:hover > a {
     background:rgba(25,30,70,.8);
     color: #fff;
@@ -54,12 +46,8 @@ header .header_box nav .header_1depth > li > a {
     padding: 0 50px;
 }
 
-header .header_box nav .header_1depth > li > ul {
-    display: none;
-}
-header .header_box nav:hover .header_1depth > li > ul {
-    display: block;
-}
+header .header_box nav .header_1depth > li > ul {display: none;}
+header .header_box nav:hover .header_1depth > li > ul {display: block;}
 .header_1depth > li > ul li a {
     font-size: 15px;
     color: #fff;
@@ -110,42 +98,11 @@ header .header_box .login form a {
     align-items: center;
 }
 
-section{width: 100%; }
-section article{position: relative; display: flex; justify-content: center; align-items: center;}
-section article h2{position: absolute; font-size: 42px; color: black;}
-section article img{}
 
-section .selecticon{ position: relative; left: 18%; display: flex; justify-content: flex-start; }
-section .selecticon a{margin: 20px 30px; text-align: center; font-size: 20px; color: black;}
-section .selecticon a:nth-of-type(1) i{color: red;}
-section .selecticon a:nth-of-type(1){color: red;}
-section .selecticon a i{font-size: 50px;}
-
-
-section .content{width: 100%; padding: 30px 0; display: flex; justify-content: center;}
-section .content .content01{position: relative;}
-section .content .content01 img{}
-section .content .content01 .subtext01{}
-section .content .content01 .subtext01 p{position: absolute; left: 200px; top: 200px; color: #41321d;}
-section .content .content01 .subtext01 p:first-of-type{ font-size: 58px;}
-section .content .content01 .subtext01 p:last-of-type{ top: 300px; font-size: 18px;}
-section .content .content01 .subtext01 .subbtn{position: absolute; left: 200px; top: 470px;}
-section .content .content01 .subtext01 .subbtn span{width: 200px; height: 50px; background: linear-gradient(to bottom, brown, #41321d);  padding: 15px 0 0px 30px; color: white;}
-section .content .content01 .subtext01 .subbtn img{ width: 15%; position: absolute; left: 140px;top: 7px;}
-
-section .content .content02{width: 100%; background: #41321d; }
-section .content .content02 ul{width: 100%; padding: 20px 160px;}
-section .content .content02 ul li{display: flex; justify-content: space-between; margin: 50px 0; }
-section .content .content02 ul li > div{display: flex; justify-content: flex-start;}
-section .content .content02 ul li p{ color: white; font-size: 14px;}
-section .content .content02 ul li p span{ color: #ffd97b; font-size: 16px;}
-section .content .content02 ul li p:nth-of-type(1){width: 35px; height: 35px; border-radius: 100%; background: #ffd97b; text-align: center; line-height: 35px; color: #41321d; font-size: 20px; margin-right: 30px;}
 
 /* footer */
 
-footer {
-    width: 100%; height: 198px;
-}
+footer {width: 100%; height: 198px;}
 footer .foo_top {
     width: 100%; height: 54px;
     background: #37405f;
@@ -156,16 +113,12 @@ footer .foo_top .foo_all {
     margin: 0 auto; padding: 0 15px;
     display: flex; justify-content: space-between;
 }
-footer .foo_top .foo_all .foo_left {
-    width: 840px;
-}
+footer .foo_top .foo_all .foo_left {width: 840px;}
 footer .foo_top .foo_all .foo_left ul {
     width: 100%;
     display: flex; justify-content: space-between;
 }
-footer .foo_top .foo_all .foo_left ul li {
-    display: flex; align-items: center;
-}
+footer .foo_top .foo_all .foo_left ul li {display: flex; align-items: center;}
 footer .foo_top .foo_all .foo_left ul li::after {
     content: "";
     width: 1px; height: 15px;
@@ -173,20 +126,14 @@ footer .foo_top .foo_all .foo_left ul li::after {
     display: inline-block;
     margin-left: 15px;
 }
-footer .foo_top .foo_all .foo_left ul li:last-of-type::after {
-    display: none;
-}
+footer .foo_top .foo_all .foo_left ul li:last-of-type::after {display: none;}
 footer .foo_top .foo_all .foo_left ul li a {
     color: #ccc;
     font-size: 14px;
     line-height: 54px;
 }
-footer .foo_top .foo_all .foo_left ul li a:hover {
-    color: #fff;
-}
-footer .foo_top .foo_all .foo_right {
-    position: relative;
-}
+footer .foo_top .foo_all .foo_left ul li a:hover {color: #fff;}
+footer .foo_top .foo_all .foo_right {position: relative;}
 footer .foo_top .foo_all .foo_right > a {
     display: flex; justify-content: center; align-items: center;
     font-size: 14px;
@@ -196,22 +143,16 @@ footer .foo_top .foo_all .foo_right > a p {
     color: #ccc;
     font-size: 16px;
 }
-footer .foo_top .foo_all .foo_right > a img {
-    margin-left: 5px;
-}
+footer .foo_top .foo_all .foo_right > a img {margin-left: 5px;}
 footer .foo_top .foo_all .foo_right > ul {
     width: 140px;
     position: absolute; right: 0; bottom: 100%;
     border: 1px solid #b5b5b5;
     padding-right: 10px;
-    display: none;    
+    display: none;
 }
-footer .foo_top .foo_all .foo_right:hover ul {
-    display: block;
-}
-footer .foo_top .foo_all .foo_right > ul li {
-    text-align: end;
-}
+footer .foo_top .foo_all .foo_right:hover ul {display: block;}
+footer .foo_top .foo_all .foo_right > ul li {text-align: end;}
 footer .foo_top .foo_all .foo_right > ul li a {
     font-size: 16px;
     line-height: 30px;
@@ -229,9 +170,7 @@ footer .bottom .bot_content {
     padding-left: 15px;
     display: flex; align-items: center;
 }
-footer .bot_content img {
-    margin-right: 20px;
-}
+footer .bot_content img {margin-right: 20px;}
 footer .bot_text {
     height: 72px;
     display: flex; flex-direction: column; justify-content: space-between;
