--- a/017_jQuery/load/style.css
+++ b/017_jQuery/load/style.css
@@ -1,13 +1,19 @@
-header,
-footer,
-section {
-    transform: translateY(2%);
-    opacity: 0;
-    transition: .5s;
+header,footer{
+	opacity: 0;
+	transition:.5s;
+}
+section{
+	opacity:0;
+	margin-top: 100px;
+	transition:.5s;
+}
+
+body.active section
+{
+	opacity: 1;
+	margin-top: 0;
 }
 body.active header,
-body.active footer,
-body.active section {
-    transform: translateY(0);
-    opacity: 1;
+body.active footer{
+	opacity: 1;
 }
